c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/extra_credit/incomplete_unions/sizeof_incomplete_union_type.c
// Can't apply sizeof to an incomplete union type

int main(void) {
    union u;
    return sizeof(union u);  // invalid - union u type is incomplete
}